# PackagePandasExample

./: README.ipynb  README.md  pyproject.toml  setup.cfg
src/PackagePandasExample/: SpecialMethods.py
