[metadata]
name = PackagePandasExample
version = 0.0.1
author = An Author
author_email = First.Last@Email.com
description = An example of a python package
long_description = file: README.md
long_description_content_type = text/markdown
url = tbd
project_urls =
    Bug Tracker = tbd
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Proprietary
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	pandas ~=1.3

[options.packages.find]
where = src
